--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="imgs/Amazing New Mondo Posters For ‘The Mummy’, ‘The Invisible Man’ And Another New One For ‘Creature From The Black Lagoon’.jpeg">
+    <img src="imgs/Psycho jan 71 10x13 Giclée Canvas Print of a Vintage Comic Book Cover - Etsy.jpeg" 
+    alt="Psycho comic book poster">
+    <img src="imgs/This is America.jpeg" 
+    alt="This is America poster"
+    title="describing the sadistic nature of the African American in relation to white people">
   </body>
 </html>
